--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -29,7 +29,8 @@
 	border: 1px solid #262626;
 	float: left;
 	width: 35%;
-	background-image: url(../../images/Stand-bg.jpg);
+	// background-image: url(../../images/Stand-bg.jpg);
+	background-color: #0f4d79;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
