--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -531,6 +531,10 @@
 	}
 }
 @media screen and (max-width: 414px) {
+	.gameResultLoading{
+		top:25%;
+		font-size: 40%;
+	}
 		.header{
 			height:50px;
 		}
