--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -15,3 +15,11 @@
         color:red;
     }
 }
+.v-loading{
+    top:0;
+    left:0;
+    background-color: #523e2533;
+    background-image: url('../../images/loading.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+}
