--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -809,6 +809,15 @@ a.btn.disabled, fieldset[disabled] a.btn {
   color: red;
 }
 
+.v-loading {
+  top: 0;
+  left: 0;
+  background-color: #523e2533;
+  background-image: url("../../images/loading.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 .poker {
   background-image: url("../../images/poker.png");
 }
