--- a/src/assets/css/scss/base/_base.scss
+++ b/src/assets/css/scss/base/_base.scss
@@ -35,10 +35,13 @@ img{
 }
 .font
 .font-total{
-	color: #fff;
+	color: gray;
 	float: left;
 	width: 100%;
 	background-color: rgba(2,29,35,0.5);
 	line-height: 2.5em;
 	text-align: center;
+}
+.font-total{
+	color: gray;
 }
