--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -6,7 +6,8 @@
 .gameResultLoading{
     // left:25%;
     top:35%;
-    background-color: #523e25ab;
+    background-color: #523e25;
+    z-index: 9;
     // transform: translateX(-50%);
     p{
         text-align: center;
