--- a/src/assets/css/scss/components/_historyRoad.scss
+++ b/src/assets/css/scss/components/_historyRoad.scss
@@ -1,90 +1,235 @@
-//路圖圖示區
-.roadImg-preLoad {
+.roadImg-preLoad {  //預載資源
     @extend %hisRoad;
 }
-.bankerRoadIcon0{
+//路圖圖示區
+//珠仔路
+.BeadPlate-B{  //莊
     @extend %hisRoad;
     @include hisRoadSpritePosition(0,0,0.35);
 }
-.bankerRoadIcon1{  //莊對
+.BeadPlate-B-BPair{  //莊對
     @extend %hisRoad;
     @include hisRoadSpritePosition(-100,0,0.35);
 }
-.bankerRoadIcon2{
+.BeadPlate-B-PPair{  //莊、閒對
     @extend %hisRoad;
     @include hisRoadSpritePosition(-200,0,0.35);
 }
-.bankerRoadIcon3{
+.BeadPlate-B-BothPair{  //莊對、閒對
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-300,0,0.19);
+    @include hisRoadSpritePosition(-300,0,0.35);
 }
-.bankerRoadIcon3-1{
+.BeadPlate-P{  //閒
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-300,0,0.11);
+    @include hisRoadSpritePosition(-400,0,0.35);
 }
-.bankerRoadIcon4{
+.BeadPlate-P-BPair{  //閒、莊對
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-400,0,0.19);
+    @include hisRoadSpritePosition(-500,0,0.35);
 }
-.bankerRoadIcon5{
+.BeadPlate-P-PPair{  //閒、閒對
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-500,0,0.19);
+    @include hisRoadSpritePosition(-600,0,0.35);
 }
-.bankerRoadIcon6{
+.BeadPlate-P-BothPair{  //閒對、莊對
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-600,0,0.19);
+    @include hisRoadSpritePosition(-700,0,0.35);
 }
-.bankerRoadIcon7{
+.BeadPlate-T{  //和
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-700,0,0.1);
+    @include hisRoadSpritePosition(-800,0,0.35);
 }
-.bankerRoadIcon8{
-    @extend %hisRoad;
-    @include hisRoadSpritePosition(-800,0,0.1);
-}
-
-.playerRoadIcon0{
+.BeadPlate-T-BPair{  //和、莊對
     @extend %hisRoad;
     @include hisRoadSpritePosition(-900,0,0.35);
 }
-.playerRoadIcon1{
+.BeadPlate-T-PPair{  //和、閒對
     @extend %hisRoad;
     @include hisRoadSpritePosition(-1000,0,0.35);
 }
-.playerRoadIcon2{  //閒對
+.BeadPlate-T-BothPair{  //和、閒對、莊對
     @extend %hisRoad;
     @include hisRoadSpritePosition(-1100,0,0.35);
 }
+//大路
+.big-B{ //莊
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(0,100,0.19);
+}
+.big-B-BPair{ //莊對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-100,100,0.19);
+}
+.big-B-PPair{ //莊、閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-200,100,0.19);
+}
+.big-B-BothPair{ // 莊對、閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-300,100,0.19);
+}
+.big-BT{  //莊和
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-400,100,0.19);
+}
+.big-BT-BPair{  //莊和 莊對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-500,100,0.19);
+}
+.big-BT-PPair{  //莊和 閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-600,100,0.19);
+}
+.big-BT-BothPair{  //莊和 莊閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-700,100,0.19);
+}
+.big-P{ //閒
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-800,100,0.19);
+}
+.big-P-BPair{ //閒、莊對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-900,100,0.19);
+}
+.big-P-PPair{ //閒、閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1000,100,0.19);
+}
+.big-P-BothPair{ // 閒對、莊對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1100,100,0.19);
+}
+.big-PT{  //閒和
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1200,100,0.19);
+}
+.big-PT-BPair{  //閒和 閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1300,100,0.19);
+}
+.big-PT-PPair{  //閒和 閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1400,100,0.19);
+}
+.big-PT-BothPair{  //閒和 莊閒對
+    @extend %hisRoad;
+    @include hisRoadSpritePosition(-1500,100,0.19);
+}
 
-.playerRoadIcon3{
+//小路(中間的)
+.small-red{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1200,0,0.19);
+    @include hisRoadSpritePosition(0,100,0.11);
 }
-.playerRoadIcon3-1{
+.small-blue{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1200,0,0.11);
+    @include hisRoadSpritePosition(-800,100,0.11);
 }
-.playerRoadIcon4{
+//大眼仔路
+.bigEye-red{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1300,0,0.19);
+    @include hisRoadSpritePosition(-1200,0,0.1);
 }
-.playerRoadIcon5{
+.bigEye-blue{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1400,0,0.19);
+    @include hisRoadSpritePosition(-1400,0,0.1);
 }
-.playerRoadIcon6{
+//蟑螂路
+cockroach-red{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1500,0,0.19);
+    @include hisRoadSpritePosition(-1300,0,0.1);
 }
-.playerRoadIcon7{
+cockroach-blue{
     @extend %hisRoad;
-    @include hisRoadSpritePosition(-1600,0,0.1);
+    @include hisRoadSpritePosition(-1500,0,0.1);
 }
-.playerRoadIcon8{
-    @extend %hisRoad;
-    @include hisRoadSpritePosition(-1700,0,0.1);
-}
-.tieRoadIcon{
-    @extend %hisRoad;
-    @include hisRoadSpritePosition(-1800,0,0.35);
-}
+
+// //舊的
+
+// .bankerRoadIcon0{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(0,0,0.35);
+// }
+// .bankerRoadIcon1{  //莊對
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-100,0,0.35);
+// }
+// .bankerRoadIcon2{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-200,0,0.35);
+// }
+// .bankerRoadIcon3{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-300,0,0.19);
+// }
+// .bankerRoadIcon3-1{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-300,0,0.11);
+// }
+// .bankerRoadIcon4{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-400,0,0.19);
+// }
+// .bankerRoadIcon5{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-500,0,0.19);
+// }
+// .bankerRoadIcon6{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-600,0,0.19);
+// }
+// .bankerRoadIcon7{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-700,0,0.1);
+// }
+// .bankerRoadIcon8{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-800,0,0.1);
+// }
+
+// .playerRoadIcon0{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-900,0,0.35);
+// }
+// .playerRoadIcon1{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1000,0,0.35);
+// }
+// .playerRoadIcon2{  //閒對
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1100,0,0.35);
+// }
+
+// .playerRoadIcon3{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1200,0,0.19);
+// }
+// .playerRoadIcon3-1{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1200,0,0.11);
+// }
+// .playerRoadIcon4{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1300,0,0.19);
+// }
+// .playerRoadIcon5{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1400,0,0.19);
+// }
+// .playerRoadIcon6{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1500,0,0.19);
+// }
+// .playerRoadIcon7{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1600,0,0.1);
+// }
+// .playerRoadIcon8{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1700,0,0.1);
+// }
+// .tieRoadIcon{
+//     @extend %hisRoad;
+//     @include hisRoadSpritePosition(-1800,0,0.35);
+// }
