//讓遊戲內的文字不能被反白

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -135,6 +135,10 @@ img {
 }
 
 .betArea-item {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
   position: relative;
   cursor: pointer;
   margin: 0px;
@@ -252,6 +256,10 @@ img {
 }
 
 .tabsArea {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
   float: left;
   width: 35%;
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
