--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -9,6 +9,7 @@ $betArea_red:#bd0505;
 $body-bg-img:url('../../images/body-bg.png');
 //loading的圖檔
 $loading-img:url('../../images/loading.svg');
+$videoLoading-img:url('../../images/videoLoading.svg');
 //coin序列圖
 $coin-spriteImg:url('../../images/coin.png');
 //路圖序列圖
