--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -16,11 +16,11 @@
         color:red;
     }
 }
-.v-loading{
+.video-loading{
     top:0;
     left:0;
     background-color: #523e2533;
-    background-image: url('../../images/loading.svg');
+    background-image: $videoLoading-img;
     background-repeat: no-repeat;
     background-position: center center;
 }
